Fix too narrow height of "Metal" skin on Windows and Linux

--- a/skin/classic/treestyletab/metal/tab-base.css
+++ b/skin/classic/treestyletab/metal/tab-base.css
@@ -79,7 +79,7 @@
 	appearance: none !important;
 	-moz-appearance: none !important;
 	border: 10px solid transparent;
-	margin: -10px 0 !important;
+	margin: 0 !important;
 	padding: 2px 5px 2px 10px;
 	position: relative !important;
 }
