--- a/skin/classic/treestyletab/ui.css
+++ b/skin/classic/treestyletab/ui.css
@@ -223,8 +223,14 @@ tabbrowser[treestyletab-drop-position="left"]:not([treestyletab-tabbar-position=
 }
 
 .tabbrowser-tabs[treestyletab-mode="vertical"]
+  .tabbrowser-tab {
+	line-height: 1;
+}
+
+.tabbrowser-tabs[treestyletab-mode="vertical"]
   .tab-stack {
 	max-height: 999999px; /* by favicons, this box can be shrunken to 16px height. */
+	min-height: 22px;
 }
 
 /* transaprent tab bar */
